Fix a unit test issue.

--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -6,5 +6,9 @@
     "QvSourceDocumentsPath": "\\\\indy-qlikview.milliman.com\\testing\\MillimanSourceDocuments",
     "FileDropRoot": "\\\\indy-qlikview.milliman.com\\testing\\FileDropRoot"
   },
-  "QvServerContentUriSubfolder": "MAPTests"
+  "QvServerContentUriSubfolder": "MAPTests",
+  "ClientReviewRenewalPeriodDays": "90",
+  "ClientReviewEarlyWarningDays": "15",
+  "ClientReviewGracePeriodDays": "14",
+  "ClientReviewAttestationLanguage": "Sure, I'll click anything"
 }
