--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.CI.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.CI.json
@@ -1,6 +1,3 @@
 ﻿{
-  "ClientReviewRenewalPeriodDays": "90",
-  "ClientReviewEarlyWarningDays": "15",
-  "ClientReviewGracePeriodDays": "14",
-  "ClientReviewAttestationLanguage": "Sure, I'll click anything"
+  // For unit tests, environment dependent appsettings are loaded from the same named file in the MapTests project folder
 }
