--- a/SftpServer/SftpServerLib/appSettings.json
+++ b/SftpServer/SftpServerLib/appSettings.json
@@ -41,7 +41,9 @@
   "SmtpFromName": "Milliman Access Portal Support",
   "SftpServerHost": "??", // value required
   "EmailDisclaimer": "******************************************************************\r\nThis communication is intended solely for the addressee and is confidential. If you\r\nare not the intended recipient, any disclosure, copying, distribution or any action taken\r\nor omitted to be taken in reliance on it, is prohibited and may be unlawful. Unless\r\nindicated to the contrary: it does not constitute professional advice or opinions upon\r\nwhich reliance may be made by the addressee or any other party, and it should be\r\nconsidered to be a work in progress.\r\n******************************************************************",
-  "DisclaimerExemptDomainString": "milliman.com" // delimit domains with ';' or whitespace
+  "DisclaimerExemptDomainString": "milliman.com", // delimit domains with ';' or whitespace
+
+  "ClientReviewRenewalPeriodDays": "90"
 
   //"SftpServerPort": "22",  // default is 22 if not provided
   //"SftpPasswordExpirationDays": "60",
