--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -19,10 +19,13 @@
     "react": "^16.3.0",
     "react-autosize-textarea": "7.0.0",
     "react-dom": "^16.3.0",
+    "react-dom-factories": "^1.0.2",
     "react-modal": "^3.5.1",
     "react-redux": "^5.1.0",
     "react-redux-toastr": "^7.4.6",
     "react-select": "^2.1.1",
+    "react-selectize": "^3.0.1",
+    "react-transition-group": "1.2.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^0.16.2",
