Prevent signin for user with ancient last login

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
@@ -69,6 +69,7 @@
   "TaskRecoveryLookbackHours": 168,
   "MaxPublicationRetries": 2,
   "MaxReductionRetries": 2,
+  "DisableInactiveUserMonths": 12,
 
   "ClientReviewRenewalPeriodDays": "90",
   "ClientReviewEarlyWarningDays": "14",
