Update an outdated model reference

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/Login.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/Login.cshtml.template
@@ -1,6 +1,6 @@
 @using System.Collections.Generic
 @using MapDbContextLib.Identity
-@model LoginViewModel
+@model LoginRequestModel
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
