--- a/MillimanAccessPortal/FileDropLib/FileDropLib.csproj
+++ b/MillimanAccessPortal/FileDropLib/FileDropLib.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Version>1.11.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
