--- a/MillimanAccessPortal/FileDropLib/FileDropLib.csproj
+++ b/MillimanAccessPortal/FileDropLib/FileDropLib.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
+    <PackageReference Include="Prm.EmailQueue" Version="2.0.0" />
     <PackageReference Include="Serilog" Version="2.9.0" />
   </ItemGroup>
 
