Two factor email tokens have configurable lifetime

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.Production.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.Production.json
@@ -23,5 +23,6 @@
       }
     ]
   },
-  "SftpServerHost": "sftp.map.milliman.com"
+  "SftpServerHost": "sftp.map.milliman.com",
+  "TwoFactorEmailTokenLifetimeMinutes": 15
 }
