Adjust 2fa token lifetime to 8 minutes in staging environment

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.Staging.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.Staging.json
@@ -25,5 +25,6 @@
       }
     ]
   },
-  "SftpServerHost": "sftp-staging.map.milliman.com"
+  "SftpServerHost": "sftp-staging.map.milliman.com",
+  "TwoFactorEmailTokenLifetimeMinutes": 8
 }
