--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
@@ -45,6 +45,7 @@
   "Global": {
     "DomainValidationRegex": "^((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\])|(([a-zA-Z\\-0-9]+\\.)+[a-zA-Z]{2,}))$",
     "EmailValidationRegex": "^(([^<>()[\\]\\\\.,;:\\s@']+(\\.[^<>()[\\]\\\\.,;:\\s@']+)*)|('.+'))@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\])|(([a-zA-Z\\-0-9]+\\.)+[a-zA-Z]{2,}))$",
+    "FileDropValidationRegex": "(\\.{2})|(\\/)|(\\\\)",
     "MaxFileUploadSize": 5368709120,
     "VirusScanWindowSeconds": 30,
     "DefaultNewUserWelcomeText": "Welcome to Milliman Access Portal!\r\n\r\nAn account has been created for you in Milliman Access Portal (MAP). MAP will allow you to securely access your Milliman content online.",
