--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreementReadOnly.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreementReadOnly.cshtml.template
@@ -2,16 +2,10 @@
 
 @{
     ViewData["Title"] = "";
-    Layout = "_Layout";
+    Layout = "_Layout_w_H_F";
 }
 
-@section CSS {
-  <% for (var css in htmlWebpackPlugin.files.css) { %>
-  <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
-  <% } %>
-}
-
-<div id="disclaimer-container">
+<div id="disclaimer-container" class="read-only">
   <h2 id="content-name">User Agreement</h2>
   <div id="raw-markdown" style="display: none">
     @Html.Hidden("AgreementText", Model.AgreementText)
@@ -20,6 +14,12 @@
   <div id="disclaimer-text">
   </div>
 </div>
+
+@section CSS {
+  <% for (var css in htmlWebpackPlugin.files.css) { %>
+  <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
+  <% } %>
+}
 
 @section Scripts {
     <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
