--- a/ContentPublishingServer/ContentPublishingService/ContentPublishingService.csproj
+++ b/ContentPublishingServer/ContentPublishingService/ContentPublishingService.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="appsettings.azure-dev.json" />
+    <Content Remove="appsettings.azure-isdev.json" />
+    <Content Remove="appsettings.azure-prod.json" />
+    <Content Remove="appsettings.azure-uat.json" />
     <Content Remove="appsettings.CI.json" />
     <Content Remove="appsettings.Development.json" />
     <Content Remove="appsettings.Production.json" />
@@ -21,6 +25,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="appsettings.azure-prod.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="appsettings.azure-uat.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="appsettings.azure-dev.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="appsettings.azure-isdev.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="appsettings.CI.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -51,6 +67,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.0.2" />
+    <PackageReference Include="Azure.Identity" Version="1.3.0" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="3.1.3" />
