Verbose logging for filedrop server in UAT

--- a/SftpServer/SftpServerLib/appSettings.AZURE-UAT.json
+++ b/SftpServer/SftpServerLib/appSettings.AZURE-UAT.json
@@ -4,7 +4,7 @@
     "AuditLogConnectionString": ""
   },
   "Serilog": {
-    "MinimumLevel": "Information",
+    "MinimumLevel": "Verbose",
     "WriteTo:Async": {
       "Name": "Async",
       "Args": {
