Revert "Verbose logging for filedrop server in UAT"
This reverts commit a0deb4aa9114739ee12559d191fb205666de17a1.

--- a/SftpServer/SftpServerLib/appSettings.AZURE-UAT.json
+++ b/SftpServer/SftpServerLib/appSettings.AZURE-UAT.json
@@ -4,7 +4,7 @@
     "AuditLogConnectionString": ""
   },
   "Serilog": {
-    "MinimumLevel": "Verbose",
+    "MinimumLevel": "Information",
     "WriteTo:Async": {
       "Name": "Async",
       "Args": {
