Allow database server override in FileDrop
The connection string in key vault has a hostname that is inaccessible to the container

--- a/Publish/SFTPServer.yaml.template
+++ b/Publish/SFTPServer.yaml.template
@@ -27,6 +27,8 @@ properties: # Properties of container group
         value: __thumbprint__
       - name: AzureVaultName
         value: __AzureVaultName__
+      - name: MAP_DATABASE_SERVER
+        value: __MAP_DATABASE_SERVER__
       resources: # Resource requirements of the instance
         requests:
           memoryInGB: 1.5
