WIP on Power BI migration tool

--- a/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/appSettings.json
+++ b/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/appSettings.json
@@ -1,9 +1,21 @@
 {
-  "PbiAuthenticationScope": "https://analysis.windows.net/powerbi/api/.default",
-  "PbiAzureADClientID": "e1529749-a541-4d6e-aea7-491d38088c83",
-  "PbiAzureADClientSecret": "co6t+avhZX+H+A/5TNAE7z0rNiyxAcNpQMVClh02LgE=",
-  "PbiGrantType": "password",
-  "PbiAzureADUsername": "prmmappowerbi@millcorpitoutlook.onmicrosoft.com",
-  "PbiAzureADPassword": "7zFv$m8f7UD9Yukr",
-  "PbiTenantId": "15dfebdf-8eb6-49ea-b9c7-f4b275f6b4b4"
+  "ConnectionStrings": {
+    "MapDbConnection": "Server=localhost;Database=map-prod;User Id=postgres;Password=postgres;"
+  },
+
+  "SourcePbiAuthenticationScope": "https://analysis.windows.net/powerbi/api/.default",
+  "SourcePbiAzureADClientID": "e1529749-a541-4d6e-aea7-491d38088c83",
+  "SourcePbiAzureADClientSecret": "co6t+avhZX+H+A/5TNAE7z0rNiyxAcNpQMVClh02LgE=",
+  "SourcePbiGrantType": "password",
+  "SourcePbiAzureADUsername": "prmmappowerbi@millcorpitoutlook.onmicrosoft.com",
+  "SourcePbiAzureADPassword": "7zFv$m8f7UD9Yukr",
+  "SourcePbiTenantId": "15dfebdf-8eb6-49ea-b9c7-f4b275f6b4b4",
+
+  "TargetPbiAuthenticationScope": "https://analysis.windows.net/powerbi/api/.default",
+  "TargetPbiAzureADClientID": "e1529749-a541-4d6e-aea7-491d38088c83",
+  "TargetPbiAzureADClientSecret": "co6t+avhZX+H+A/5TNAE7z0rNiyxAcNpQMVClh02LgE=",
+  "TargetPbiGrantType": "password",
+  "TargetPbiAzureADUsername": "prmmappowerbi@millcorpitoutlook.onmicrosoft.com",
+  "TargetPbiAzureADPassword": "7zFv$m8f7UD9Yukr",
+  "TargetPbiTenantId": "15dfebdf-8eb6-49ea-b9c7-f4b275f6b4b4"
 }
