--- a/MillimanAccessPortal/PowerBILib/PowerBILib.csproj
+++ b/MillimanAccessPortal/PowerBILib/PowerBILib.csproj
@@ -6,6 +6,7 @@
     <Company>Milliman Inc.</Company>
     <Version>1.12.0</Version>
     <LangVersion>latest</LangVersion>
+    <UserSecretsId>043ef0f8-a7bf-4841-b915-ba46f3d24d2e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
