More wip, PBI migration

--- a/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/appSettings.json
+++ b/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/appSettings.json
@@ -8,7 +8,7 @@
   "SourcePbiAzureADClientSecret": "co6t+avhZX+H+A/5TNAE7z0rNiyxAcNpQMVClh02LgE=",
   "SourcePbiGrantType": "password",
   "SourcePbiAzureADUsername": "prmmappowerbi@millcorpitoutlook.onmicrosoft.com",
-  "SourcePbiAzureADPassword": "7zFv$m8f7UD9Yukr",
+  "SourcePbiAzureADPassword": "$@k2aeNoA4jTSKU*545jUuEX9OT9itJnrb", // "7zFv$m8f7UD9Yukr",
   "SourcePbiTenantId": "15dfebdf-8eb6-49ea-b9c7-f4b275f6b4b4",
 
   "TargetPbiAuthenticationScope": "https://analysis.windows.net/powerbi/api/.default",
