--- a/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/PowerBiMigration.csproj
+++ b/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/PowerBiMigration.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
