First draft of full power bi migration logic

--- a/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/appSettings.json
+++ b/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/appSettings.json
@@ -1,3 +1,24 @@
 {
-  "SkipFileWrite": false
+  "ConnectionStrings": {
+    "MapDbConnection": ""
+  },
+
+  "SourcePbiAuthenticationScope": "https://analysis.windows.net/powerbi/api/.default",
+  "SourcePbiAzureADClientID": "e1529749-a541-4d6e-aea7-491d38088c83",
+  "SourcePbiAzureADClientSecret": "",
+  "SourcePbiGrantType": "password",
+  "SourcePbiAzureADUsername": "prmmappowerbi@millcorpitoutlook.onmicrosoft.com",
+  "SourcePbiAzureADPassword": "",
+  "SourcePbiTenantId": "15dfebdf-8eb6-49ea-b9c7-f4b275f6b4b4",
+
+  "TargetPbiAuthenticationScope": "https://analysis.windows.net/powerbi/api/.default",
+  "TargetPbiAzureADClientID": "tbd",
+  "TargetPbiAzureADClientSecret": "tbd",
+  "TargetPbiGrantType": "tbd",
+  "TargetPbiAzureADUsername": "tbd",
+  "TargetPbiAzureADPassword": "tbd",
+  "TargetPbiTenantId": "tbd",
+
+  "SkipFileWrite": false,
+  "ImportToTarget": false
 }
