add qvServerHost setting

--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -9,4 +9,5 @@
   "QvServerContentUriSubfolder": "MAPTests",
   "ClientReviewRenewalPeriodDays": "90",
   "ClientReviewEarlyWarningDays": "15",
+  "QvServerHost": "indy-qlikview.milliman.com"
 }
