add Qlikview user config to pass CI

--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -9,5 +9,7 @@
   "QvServerContentUriSubfolder": "MAPTests",
   "ClientReviewRenewalPeriodDays": "90",
   "ClientReviewEarlyWarningDays": "15",
-  "QvServerHost": "indy-qlikview.milliman.com"
+  "QvServerHost": "indy-qlikview.milliman.com",
+  "QvServerAdminUserAuthenticationDomain": "milliman.com",
+  "QvServerAdminUserName": "MAP-QV-Admin"
 }
