fix qv user domain
do this because this is a local account

--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -10,6 +10,6 @@
   "ClientReviewRenewalPeriodDays": "90",
   "ClientReviewEarlyWarningDays": "15",
   "QvServerHost": "indy-qlikview.milliman.com",
-  "QvServerAdminUserAuthenticationDomain": "milliman.com",
+  "QvServerAdminUserAuthenticationDomain": "Indy-Qlikview",
   "QvServerAdminUserName": "MAP-QV-Admin"
 }
