--- a/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/appSettings.json
+++ b/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/appSettings.json
@@ -12,12 +12,13 @@
   "SourcePbiTenantId": "15dfebdf-8eb6-49ea-b9c7-f4b275f6b4b4",
 
   "TargetPbiAuthenticationScope": "https://analysis.windows.net/powerbi/api/.default",
-  "TargetPbiAzureADClientID": "tbd",
-  "TargetPbiAzureADClientSecret": "tbd",
-  "TargetPbiGrantType": "tbd",
-  "TargetPbiAzureADUsername": "tbd",
-  "TargetPbiAzureADPassword": "tbd",
-  "TargetPbiTenantId": "tbd",
+  "TargetPbiAzureADClientID": "3658b008-9e96-499d-ad34-989d5a89f932",
+  "TargetPbiAzureADClientSecret": "",
+  "TargetPbiGrantType": "password",
+  "TargetPbiAzureADUsername": "PRMMAPPowerBI@milliman.onmicrosoft.com",
+  "TargetPbiAzureADPassword": "",
+  "TargetPbiTenantId": "e240d61e-61e3-4c9e-ab90-8644b2f4d2a9",
+  "TargetPbiCapacityId": "698DFF5A-6D96-4D79-A288-A899A24F2374",
 
   "SkipFileWrite": false,
   "ImportToTarget": false
