--- a/MillimanAccessPortal/MillimanAccessPortal/MillimanAccessPortal.csproj
+++ b/MillimanAccessPortal/MillimanAccessPortal/MillimanAccessPortal.csproj
@@ -72,6 +72,7 @@
     <None Remove="src\ts\react\client-admin\redux\store.ts" />
     <None Remove="src\ts\react\system-admin\modals\change-system-admin-status-modal.tsx" />
     <None Remove="src\ts\react\system-admin\modals\remove-user-from-profit-center.tsx" />
+    <None Remove="src\ts\react\system-admin\modals\view-configs.tsx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AuditLogLib\AuditLogLib.csproj" />
@@ -173,6 +174,7 @@
     <TypeScriptCompile Include="src\ts\react\client-admin\redux\store.ts" />
     <TypeScriptCompile Include="src\ts\react\system-admin\modals\change-system-admin-status-modal.tsx" />
     <TypeScriptCompile Include="src\ts\react\system-admin\modals\remove-user-from-profit-center.tsx" />
+    <TypeScriptCompile Include="src\ts\react\system-admin\modals\view-configs.tsx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="BuildTimeProperties.cs">
