Minor config file adjustments

--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -4,7 +4,8 @@
     "ContentItemRootPath": "\\\\indy-qlikview.milliman.com\\testing\\ContentRoot",
     "MapPublishingServerExchangePath": "\\\\indy-qlikview.milliman.com\\testing\\MapPublishingServerExchange",
     "QvSourceDocumentsPath": "\\\\indy-qlikview.milliman.com\\testing\\MillimanSourceDocuments",
-    "FileDropRoot": "\\\\indy-qlikview.milliman.com\\testing\\FileDropRoot"
+    "FileDropRoot": "\\\\indy-qlikview.milliman.com\\testing\\FileDropRoot",
+    "TemporaryExports": "\\\\indy-qlikview\\testing\\TemporaryExports"
   },
   "QvServerContentUriSubfolder": "MAPTests",
   "ClientReviewRenewalPeriodDays": "90",
