Configuration dumping working as desired

--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -13,5 +13,5 @@
   "QvServerHost": "indy-qlikview.milliman.com",
   "QvServerAdminUserAuthenticationDomain": "Indy-Qlikview",
   "QvServerAdminUserName": "MAP-QV-Admin",
-  "DumpVerboseConfiguration":  true
+  "DumpVerboseConfiguration":  false
 }
