Include additional QlikView configuration

--- a/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
+++ b/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
@@ -7,5 +7,12 @@
     "FileDropRoot": "\\\\indy-qlikview\\testing\\FileDropRoot",
     "SampleData": "\\\\indy-qlikview\\testing\\Sample Data"
   },
-  "QvServerContentUriSubfolder": "MAPTests"
+  "QvServerContentUriSubfolder": "MAPTests",
+  "QvsQmsApiUrl": "http://indy-qlikview:4799/QMS/Service",
+  "QdsQmsApiUrl": "http://indy-qlikview:4799/QMS/Service",
+  "QvServerHost": "indy-qlikview.milliman.com",
+  "QvServerAdminUserAuthenticationDomain": "Indy-Qlikview",
+  "QvServerAdminUserName": "MAP-QV-Admin",
+  "QvNamedCalDomainList": "milliman.com",
+  "QvNamedCalUsernameList": ""
 }
