--- a/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/PowerBiMigration.csproj
+++ b/MillimanAccessPortal/PowerBiMigration/PowerBiMigration/PowerBiMigration.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.13" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
