--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/EnableAccount.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/EnableAccount.cshtml.template
@@ -83,6 +83,13 @@
                                     <span asp-validation-for="Employer" class="text-danger"></span>
                                 </div>
                             </div>
+                            <div class="form-input form-input-text flex-item-for-phone-only-12-12 flex-item-for-tablet-up-8-12">
+                                <label class="form-input-text-title" asp-for="TimeZone"></label>
+                                <div>
+                                    @Html.DropDownListFor(m => m.TimeZone, new SelectList(Model.TimeZoneSelections))
+                                    <span asp-validation-for="TimeZone" class="text-danger"></span>
+                                </div>
+                            </div>
 							@if (Model.IsLocalAccount) 
 							{
 								<div class="form-input form-input-text flex-item-12-12">
