--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/CreateInitialUser.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/CreateInitialUser.cshtml.template
@@ -1,13 +1,15 @@
 ﻿@model CreateInitialUserViewModel
 @{
     ViewData["Title"] = "";
-    Layout = "_Layout_w_H_F";
+    Layout = "_Layout";
 }
 
 @Html.AntiForgeryToken()
 
+@await Html.PartialAsync("_Header")
 <div id="content-wrapper">
 </div>
+@await Html.PartialAsync("_Footer")
 
 @section CSS {
   <% for (var css in htmlWebpackPlugin.files.css) { %>
