--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/CreateInitialUser.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/CreateInitialUser.cshtml.template
@@ -1,15 +1,13 @@
 ﻿@model CreateInitialUserViewModel
 @{
     ViewData["Title"] = "";
-    Layout = "_Layout";
+    Layout = "_Layout_w_H_F";
 }
 
 @Html.AntiForgeryToken()
 
-@await Html.PartialAsync("_Header")
-<div id="content-wrapper">
+<div id="content-container">
 </div>
-@await Html.PartialAsync("_Footer")
 
 @section CSS {
   <% for (var css in htmlWebpackPlugin.files.css) { %>
