--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ClientAdmin/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ClientAdmin/Index.cshtml.template
@@ -1,7 +1,7 @@
 @model MapDbContextLib.Context.Client;
 
 @{
-    ViewData["Title"] = "Client Administration";
+    ViewData["Title"] = "Client Admin";
     Layout = "_Layout_w_NB_H_F";
     ViewData["NavIcon"] = "ClientAdmin";
 }
