--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -79,7 +79,6 @@
     "svg-sprite-loader": "^4.1.3",
     "svgo": "^1.0.5",
     "svgo-loader": "^2.1.0",
-    "testcafe": "^0.23.0",
     "ts-jest": "^23.10.4",
     "ts-loader": "^5.2.2",
     "tslint": "^5.12.1",
@@ -98,8 +97,7 @@
   "scripts": {
     "build-dev": "webpack --config=webpack.dev.js",
     "build-prod": "webpack --config=webpack.prod.js",
-    "test": "jest",
-    "test-browsers": "testcafe chrome,firefox,ie src/browser_tests/"
+    "test": "jest"
   },
   "jest-junit": {
     "output": "../../_test_results/jest-test-results.xml"
@@ -109,7 +107,6 @@
     "collectCoverageFrom": [
       "src/ts/status-monitor.ts",
       "src/ts/shared.ts",
-      "src/ts/check-password.ts",
       "src/ts/react/**/*.{ts,tsx}",
       "src/ts/upload/**/*.{ts,tsx}",
       "!src/ts/upload/upload.ts",
@@ -126,8 +123,7 @@
       "jest-junit"
     ],
     "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/src/browser_tests/"
+      "/node_modules/"
     ],
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "testURL": "http://localhost/",
