--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -52,8 +52,6 @@
     "html-webpack-plugin": "^3.0.7",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
-    "less": "^3.0.1",
-    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -117,7 +115,7 @@
       "node"
     ],
     "moduleNameMapper": {
-      "\\.(css|less|sass|scss)$": "<rootDir>/src/ts/__mocks__/styleMock.ts"
+      "\\.(css|sass|scss)$": "<rootDir>/src/ts/__mocks__/styleMock.ts"
     }
   },
   "-vs-binding": {
