--- a/MillimanAccessPortal/MapCommonLib/MapCommonLib.csproj
+++ b/MillimanAccessPortal/MapCommonLib/MapCommonLib.csproj
@@ -6,12 +6,13 @@
     <Authors>Milliman PRM Analytics Team</Authors>
     <Company>Milliman Inc.</Company>
     <LangVersion>latest</LangVersion>
+    <UserSecretsId>67c29e11-379f-467a-97ec-759fa8a7a7d5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.18" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.18" />
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="System.Security.Principal.Windows" Version="4.7.0" />
   </ItemGroup>
