Serilog related package upgrades

--- a/SftpServer/SftpServerLib/appSettings.AZURE-ISDEV.json
+++ b/SftpServer/SftpServerLib/appSettings.AZURE-ISDEV.json
@@ -28,6 +28,15 @@
               "pathFormat": "/mnt/filedroplogs/{Date}-MapSftpLog.txt",
               "outputTemplate": "{UtcTimestamp:yyyy-MM-ddTHH:mm:ss.fffK} [{Level:u3}] {Message}{NewLine}{Exception}"
             }
+          },
+          {
+            "Name": "File",
+            "Args": {
+              "path": "/mnt/filedroplogs/MapSftpLog.txt",
+              "retainedFileCountLimit": 60,
+              "rollingInteval": "Day",
+              "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
+            }
           }
         ]
       }
