--- a/SftpServer/SftpServerLib/appSettings.AZURE-UAT.json
+++ b/SftpServer/SftpServerLib/appSettings.AZURE-UAT.json
@@ -23,10 +23,12 @@
             }
           },
           {
-            "Name": "RollingFile",
+            "Name": "File",
             "Args": {
-              "pathFormat": "/mnt/filedroplogs/{Date}-MapSftpLog.txt",
-              "outputTemplate": "{UtcTimestamp:yyyy-MM-ddTHH:mm:ss.fffK} [{Level:u3}] {Message}{NewLine}{Exception}"
+              "path": "/mnt/filedroplogs/MapUatSftpLog.txt",
+              "retainedFileCountLimit": 60,
+              "rollingInteval": "Day",
+              "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
             }
           }
         ]
