--- a/SftpServer/SftpServerLib/appSettings.json
+++ b/SftpServer/SftpServerLib/appSettings.json
@@ -23,10 +23,12 @@
             }
           },
           {
-            "Name": "RollingFile",
+            "Name": "File",
             "Args": {
-              "pathFormat": "C:\\MapSftpApplicationLog\\{Date}-MapSftpLog.txt",
-              "outputTemplate": "{UtcTimestamp:yyyy-MM-ddTHH:mm:ss.fffK} [{Level:u3}] {Message}{NewLine}{Exception}"
+              "path": "C:\\MapSftpApplicationLog\\MapSftpLog.txt",
+              "retainedFileCountLimit": 60,
+              "rollingInteval": "Day",
+              "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
             }
           }
         ]
