Update environment specific appsettings for new Serilog sink package

--- a/ContentPublishingServer/ContentPublishingService/appSettings.Internal.json
+++ b/ContentPublishingServer/ContentPublishingService/appSettings.Internal.json
@@ -22,9 +22,11 @@
             }
           },
           {
-            "Name": "RollingFile",
+            "Name": "File",
             "Args": {
-              "pathFormat": "D:\\MAP Publishing Service\\Logs\\{Date}-ContentPublishingSvc.txt",
+              "path": "D:\\MAP Publishing Service\\Logs\\ContentPublishingSvc.txt",
+              "retainedFileCountLimit": 60,
+              "rollingInteval": "Day",
               "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
             }
           }
