--- a/ContentPublishingServer/ContentPublishingService/appsettings.Development.json
+++ b/ContentPublishingServer/ContentPublishingService/appsettings.Development.json
@@ -38,9 +38,11 @@
             }
           },
           {
-            "Name": "RollingFile",
+            "Name": "File",
             "Args": {
-              "pathFormat": "C:\\MapPublishingServiceApplicationLog\\PublishingServiceLog-{Date}.txt",
+              "path": "C:\\MapPublishingServiceApplicationLog\\ContentPublishingSvc.txt",
+              "retainedFileCountLimit": 60,
+              "rollingInteval": "Day",
               "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
             }
           } //,
