Update log path for MAP application

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
@@ -17,10 +17,12 @@
         }
       },
       {
-        "Name": "RollingFile",
+        "Name": "File",
         "Args": {
-          "pathFormat": "C:\\MapApplicationLog\\{Date}-MapLog.txt",
-          "outputTemplate": "{Timestamp:yyyyMMdd-HHmmss.fff zzz} [{Level:u3}] {Message}{NewLine}{Exception}"
+          "path": "C:\\MapApplicationLog\\MapLog.txt",
+          "retainedFileCountLimit": 60,
+          "rollingInteval": "Day",
+          "outputTemplate": "{UtcTimestamp:o} [{Level:u3}] {Message}{NewLine}{Exception}"
         }
       }
     ]
