Corrected some temporarily commented appsettings

--- a/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
+++ b/ContentPublishingServer/ContentPublishingServiceTests/appsettings.CI.json
@@ -9,10 +9,10 @@
     "SampleData": "\\\\indy-qlikview\\testing\\Sample Data"
   },
   "QvServerContentUriSubfolder": "MAPTests",
-  //"QvsQmsApiUrl": "http://Indy-QVProd01:4799/QMS/Service",
-  //"QdsQmsApiUrl": "http://Indy-QVProd01:4799/QMS/Service",
-  //"QvServerHost": "Indy-QVProd01.milliman.com",
-  //"QvServerAdminUserAuthenticationDomain": "Indy-QVProd01",
+  //"QvsQmsApiUrl": "http://Indy-qlikview:4799/QMS/Service",
+  //"QdsQmsApiUrl": "http://Indy-qlikview:4799/QMS/Service",
+  //"QvServerHost": "Indy-qlikview.milliman.com",
+  //"QvServerAdminUserAuthenticationDomain": "Indy-qlikview",
   "QvServerAdminUserName": "MAP-QV-Admin",
   "QvNamedCalDomainList": "milliman.com",
   "QvNamedCalUsernameList": "",
@@ -21,6 +21,6 @@
   "QdsQmsApiUrl": "http://indy-qvprod01:4799/QMS/Service",
   "QvsQmsApiUrl": "http://indy-qvprod01:4799/QMS/Service",
   "QvServerAdminUserAuthenticationDomain": "indy-qvprod01.milliman.com",
-  "IQmsUrl": "http://indy-qvprod01:4799/QMS/Service",
+  "IQmsUrl": "http://indy-qvprod01:4799/QMS/Service"
 
 }
